--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prismicio/client": "5.1.0",
+    "@svgr/webpack": "^6.2.1",
+    "@types/prismic-dom": "^2.1.1",
+    "babel-plugin-inline-react-svg": "^2.0.1",
     "next": "12.1.0",
+    "next-images": "^1.8.4",
+    "prismic-dom": "2.2.6",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.49.8"
   },
   "devDependencies": {
     "@types/node": "17.0.18",
