error send mail

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,10 +8,12 @@
     "além",
     "Analítico",
     "Antecipa",
+    "aplicação",
     "Apontamentos",
     "aproximação",
     "Apuração",
     "área",
+    "arquivo",
     "assim",
     "atividades",
     "avaliações",
@@ -27,6 +29,7 @@
     "colaboradores",
     "Confira",
     "conheça",
+    "conhecer",
     "Conosco",
     "constante",
     "Contábeis",
@@ -53,11 +56,15 @@
     "Emprego",
     "empresa",
     "empresas",
+    "encontrada",
     "ensina",
     "Entrada",
     "Entradas",
+    "entrar",
     "entrega",
+    "enviar",
     "escolha",
+    "está",
     "Estados",
     "facultativo",
     "Fale",
@@ -87,12 +94,15 @@
     "Joaquim",
     "jurídicas",
     "lema",
+    "licença",
     "limite",
     "Livro",
     "Livros",
     "Lucro",
     "maior",
     "mantê",
+    "Mensagem",
+    "menssagem",
     "mudanças",
     "mundo",
     "Nacional",
@@ -108,6 +118,7 @@
     "orientação",
     "Outros",
     "Pagamento",
+    "Página",
     "parecer",
     "pela",
     "perca",
@@ -116,7 +127,9 @@
     "pessoas",
     "pode",
     "Pollar",
+    "possui",
     "Posterga",
+    "Preencha",
     "preferir",
     "presta",
     "prestação",
@@ -140,6 +153,7 @@
     "seguintes",
     "segurado",
     "seguras",
+    "sendgrid",
     "Serviços",
     "Severino",
     "sindical",
@@ -149,8 +163,10 @@
     "soluções",
     "sucesso",
     "svgr",
+    "também",
     "tecnologias",
     "todas",
+    "todos",
     "Trabalha",
     "Trabalhista",
     "trabalhistas",
