--- a/package.json
+++ b/package.json
@@ -12,16 +12,21 @@
     "@prismicio/client": "5.1.0",
     "@svgr/webpack": "^6.2.1",
     "@types/prismic-dom": "^2.1.1",
+    "axios": "^0.27.2",
     "babel-plugin-inline-react-svg": "^2.0.1",
     "next": "12.1.0",
     "next-images": "^1.8.4",
+    "nodemailer": "^6.7.4",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "prismic-dom": "2.2.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hot-toast": "^2.2.0",
     "sass": "^1.49.8"
   },
   "devDependencies": {
     "@types/node": "17.0.18",
+    "@types/nodemailer": "^6.4.4",
     "@types/react": "17.0.39",
     "eslint": "8.9.0",
     "eslint-config-next": "12.1.0",
