--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,11 +22,13 @@
     "Caixa",
     "cálculos",
     "Camilo",
+    "Centro",
     "ciência",
     "cliente",
     "clientes",
     "Cofins",
     "colaboradores",
+    "Completo",
     "Confira",
     "conheça",
     "conhecer",
@@ -62,7 +64,9 @@
     "Entradas",
     "entrar",
     "entrega",
+    "enviada",
     "enviar",
+    "erro",
     "escolha",
     "está",
     "Estados",
@@ -79,6 +83,7 @@
     "ganhos",
     "geralmente",
     "Giacomini",
+    "gtag",
     "história",
     "ICMS",
     "imobiliários",
@@ -110,14 +115,17 @@
     "nossa",
     "nossos",
     "Notícias",
+    "novamente",
     "novembro",
     "números",
     "Obrigação",
     "Obrigações",
+    "Ocorreu",
     "Operações",
     "orientação",
     "Outros",
     "Pagamento",
+    "pageview",
     "Página",
     "parecer",
     "pela",
@@ -151,11 +159,13 @@
     "Salários",
     "SEFIP",
     "seguintes",
+    "Segunda",
     "segurado",
     "seguras",
     "sendgrid",
     "Serviços",
     "Severino",
+    "Sexta",
     "sindical",
     "Situação",
     "Sobre",
@@ -165,6 +175,8 @@
     "svgr",
     "também",
     "tecnologias",
+    "tentar",
+    "Tente",
     "todas",
     "todos",
     "Trabalha",
@@ -176,7 +188,10 @@
     "útil",
     "velocidade",
     "vencimento",
+    "Vercel",
+    "Videira",
     "visitas",
-    "voltadas"
+    "voltadas",
+    "Voltar"
   ]
 }
