--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "sass": "^1.49.8"
   },
   "devDependencies": {
+    "@types/gtag.js": "^0.0.10",
     "@types/node": "17.0.18",
     "@types/nodemailer": "^6.4.4",
     "@types/react": "17.0.39",
