--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -144,6 +144,8 @@
     "prestação",
     "Presumido",
     "prioridade",
+    "prismic",
+    "Prismic",
     "prismicio",
     "projeto",
     "rápidas",
