--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@prismicio/client": "5.1.0",
     "@svgr/webpack": "^6.2.1",
     "@types/prismic-dom": "^2.1.1",
+    "@vercel/analytics": "^1.0.1",
     "axios": "^0.27.2",
     "babel-plugin-inline-react-svg": "^2.0.1",
     "next": "12.1.0",
